--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
+  <!-- custom css file link  -->
+  <link rel="stylesheet" href="/css/main.css">
+
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,22 +19,39 @@
 </head>
 <body>
 
-  Order Summary
+  <main class="container">
+    <img src="/images/illustration-hero.svg" alt="a girl listen to the music" class="hero-img">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    <article>
+      <h2 class="title">Order Summary</h2>
 
-  Annual Plan
-  $59.99/year
+      <p class="description">
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
 
-  Change
+      <section class="plan-price-container">
+        <div class="plan-price-icon">
+          <img src="/images/icon-music.svg" alt="music icon">
 
-  Proceed to Payment
-  Cancel Order
+          <div class="plan-price">
+            <h3 class="plan">Annual Plan</h3>
+            <p class="price">$59.99/year</p>
+          </div>
+        </div>
+
+        <button class="change-btn">Change</button>
+      </section>
+
+      <button class="payment-btn">Proceed to Payment</button>
+
+      <button class="cancel-btn">Cancel Order</button>
+    </article>
+  </main>
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
